<resources>
    <string name="app_name">Udacitify</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="user">Kanji Hara</string>
    <string name="user_email">hkanjih@gmail.com</string>


    <string name="menu_listen_now">Listen Now</string>
    <string name="menu_search">Search</string>
    <string name="menu_browse">Browse</string>

    <string name="menu_social">You</string>
    <string name="menu_download_only">Download Only</string>
    <string name="menu_your_library">Your Library</string>
    <string name="menu_settings">Settings</string>

    <string name="search_title">Search Music</string>
    <string name="home">Home</string>


    <string name="internal_list_just">Just For You</string>
    <string name="internal_list_recently">Recently Played</string>
    <string name="internal_list_inspired">Inspired By Your Recent Listening</string>

    <string name="play_title">Now Playing</string>

    <string name="disc_title_default">Name</string>
    <string name="disc_follow_default">0 Followers</string>

    <string name="disc_title_tim">Tim e Vanessa</string>
    <string name="disc_follow_tim">150K Followers</string>

    <string name="music_name">Music Pedro of Tim e Vanessa</string>

    <string name="settings_volume_normalize">Normalize Volume</string>
    <string name="settings_volume_normalize_description">Set the same volume level for all track</string>

    <string name="settings_music_quality">Music Quality</string>

    <string name="settings_streaming">Streaming</string>
    <string name="settings_streaming_description">Higher quality uses more data.</string>
    <string name="settings_quality_automatic">Automatic Quality</string>
    <string name="settings_quality_normal">Normal Quality</string>
    <string name="settings_quality_high">High Quality</string>

    <string name="settings_download">Download</string>
    <string name="settings_download_description">Higher quality uses more disk space.</string>

    <string name="settings_payment">Became a premium  ?</string>
    <string name="settings_payment_description">Safe payment using Visa Checkout Api.</string>


    <string-array name="streaming_quality_type">
        <item>@string/settings_quality_automatic</item>
        <item>@string/settings_quality_normal</item>
        <item>@string/settings_quality_high</item>
    </string-array>

    <string-array name="download_quality_type">
        <item>@string/settings_quality_normal</item>
        <item>@string/settings_quality_high</item>
    </string-array>


    <string name="settings_download_mobile">Download using cellular</string>
    <string name="settings_download_mobile_description">Recommended Setting:Off</string>




</resources>
