<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_listen_now"
            android:icon="@drawable/ic_music_video_black_24dp"
            android:title="@string/menu_listen_now" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/ic_album_black_24dp"
            android:title="@string/menu_browse" />
        <item
            android:id="@+id/nav_download_only"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/menu_download_only" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library_music_black_24dp"
            android:title="@string/menu_your_library" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>


</menu>
