<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.udacity.udacitify.SettingsActivity"
    android:orientation="vertical">
    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView

                    android:text="@string/settings_volume_normalize"
                    style="@style/settings_option"/>
                <TextView
                    style="@style/settings_description"
                    android:text="@string/settings_volume_normalize_description"/>
            </LinearLayout>
            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </LinearLayout>
        <TextView
            style="@style/settings_option"
            android:text="@string/settings_music_quality"
            android:layout_marginBottom="16dp"
            android:textColor="#000000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                >
                <TextView
                    android:text="@string/settings_volume_normalize"
                    style="@style/settings_option"/>
                <TextView
                    style="@style/settings_description"
                    android:text="@string/settings_volume_normalize_description"/>
            </LinearLayout>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/streaming_quality_type"
                android:gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                >
                <TextView

                    android:text="@string/settings_volume_normalize"
                    style="@style/settings_option"/>
                <TextView
                    style="@style/settings_description"
                    android:text="@string/settings_volume_normalize_description"/>
            </LinearLayout>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/download_quality_type"
                android:gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:text="@string/settings_download_mobile"
                    style="@style/settings_option"/>
                <TextView
                    style="@style/settings_description"
                    android:text="@string/settings_download_mobile_description"/>
            </LinearLayout>
            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
